force-app/main/default/objects/Identity__c/Identity__c.object-meta.xml
<CustomObject>
    <label>Identity</label>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>Identity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>