force-app/main/default/objects/Identity__c/fields/Form_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Identification_Number__c</fullName>
    <inlineHelpText>Driver&apos;s License number, State Id number, or Passport number</inlineHelpText>
    <label>Form Identification Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>