force-app/main/default/objects/Identity__c/fields/Generated_ID__c.field-meta.xml
<CustomField>
    <fullName>Generated_ID__c</fullName>
    <label>Generated ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>