force-app/main/default/objects/Identity__c/fields/Security_Answer__c.field-meta.xml
<CustomField>
    <fullName>Security_Answer__c</fullName>
    <label>Security Answer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>