force-app/main/default/objects/Identity__c/fields/Security_Question__c.field-meta.xml
<CustomField>
    <fullName>Security_Question__c</fullName>
    <inlineHelpText>This will be the question you answer to retrieve your generated ID</inlineHelpText>
    <label>Security Question</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>