force-app/main/default/objects/Identity__c/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <label>Social Security Number</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>