force-app/main/default/objects/Identity__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Used a hack to query for Social Security Number of an Identity__c since Social_Security_Number__c, which is a Text (Encrypted) type, can&apos;t be used in the filter of a query</description>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>